@@ -209,3 +209,44 @@ function substitute_snmp_query_data($string, $device_id, $snmp_query_id, $snmp_i
 
 	return $string;
 }
+
+function substitute_graph_data($graph_items, $graph, $graph_data_array, $rrdtool_version) {
+	require_once(CACTI_BASE_PATH . "/lib/time.php");
+	
+	$graph_date = date_time_format();
+
+	/* explicit start/end options given */
+	if (strpos($graph_items, '|graph_start|') > 0 ||
+		strpos($graph_items, '|graph_end|') > 0) {
+			
+		$start = date($graph_date, time()+$graph["graph_start"]);
+		$end = date($graph_date, time()+$graph["graph_end"]);
+		
+		/* reformat depending on rrdtool version */
+		if ($rrdtool_version != RRD_VERSION_1_0) {
+			$start = str_replace(":", "\:", $start); 
+			$end = str_replace(":", "\:", $end);
+		}
+		/* and finally replace */
+		$graph_items = str_replace('|graph_start|', $start, $graph_items);
+		$graph_items = str_replace('|graph_end|', $end, $graph_items);
+		 
+	}elseif ((isset($graph_data_array["graph_start"])) && (isset($graph_data_array["graph_end"]))) {
+		if (($graph_data_array["graph_start"] < 0) && ($graph_data_array["graph_end"] < 0)) {
+			$start = date($graph_date, time()+$graph_data_array["graph_start"]);
+			$end = date($graph_date, time()+$graph_data_array["graph_end"]);
+		} else {
+			$start = date($graph_date, $graph_data_array["graph_start"]);
+			$end = date($graph_date, $graph_data_array["graph_end"]);
+		}
+		/* reformat depending on rrdtool version */
+		if ($rrdtool_version != RRD_VERSION_1_0) {
+			$start = str_replace(":", "\:", $start); 
+			$end = str_replace(":", "\:", $end);
+		}
+		/* and finally replace */
+		$graph_items = "COMMENT:\"" . __("From %s To %s", $start, $end) . "\\c\"" . RRD_NL . "COMMENT:\"  \\n\"" . RRD_NL . $graph_items;
+	}
+	
+	return $graph_items;
+}
