@@ -175,6 +175,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -feature: upgrade procedure made repeatable
 -feature: add more table upgrade procedures and API functions: table install, column and key upgrade
 -feature: path for perl/shell like path for php to be used in Data Input Methods
+-feature: introduce |graph_start| and |graph_end| for use with COMMENT/GPRINT or the like
 
 0.8.7h
 -bug#0001403: 'reapply suggested names' doesn't work correctly for graphs and data sources
